// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Form Dialog renders edit author dialog form 1`] = `
<section
  className="makeStyles-root-1"
>
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="rich-text-input"
  />
  <div
    className="makeStyles-inputField-2"
  >
    <div
      data-cmp="Menu"
    >
      <div
        data-cmp="MenuItem"
      >
        Edit Affiliation
      </div>
      <div
        data-cmp="MenuItem"
      >
        Remove Affiliation
      </div>
    </div>
    <div
      className="makeStyles-affiliatedAuthorRow-5"
    >
      <div
        data-cmp="FormControl"
      >
        <div
          data-cmp="InputLabel"
        >
          Affiliation
        </div>
        <div
          data-cmp="Select"
        >
          <div
            data-cmp="MenuItem"
          >
            Set affiliation
          </div>
          <div
            data-cmp="MenuItem"
          >
            Add new affiliation
          </div>
        </div>
      </div>
      <div
        data-cmp="iconButton"
      />
    </div>
    <div
      data-cmp="Button"
    />
  </div>
  <div
    className="makeStyles-buttonPanel-3"
  >
    <div
      data-cmp="Button"
    />
    <div
      aria-hidden={true}
      className="makeStyles-spacer-4"
    />
    <div
      data-cmp="Button"
    />
    <div
      data-cmp="Button"
    />
  </div>
</section>
`;

exports[`Author Form Dialog renders new author dialog form 1`] = `
<section
  className="makeStyles-root-1"
>
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="TextField"
  />
  <div
    data-cmp="rich-text-input"
  />
  <div
    className="makeStyles-inputField-2"
  >
    <div
      data-cmp="Menu"
    >
      <div
        data-cmp="MenuItem"
      >
        Edit Affiliation
      </div>
      <div
        data-cmp="MenuItem"
      >
        Remove Affiliation
      </div>
    </div>
    <div
      data-cmp="Button"
    />
  </div>
  <div
    className="makeStyles-buttonPanel-3"
  >
    <div
      aria-hidden={true}
      className="makeStyles-spacer-4"
    />
    <div
      data-cmp="Button"
    />
    <div
      data-cmp="Button"
    />
  </div>
</section>
`;
